$npm_package_config_commitmessage

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
             src="https://static.wixstatic.com/media/1f2952_52ba1dca50fc4c56aca329a9b7d9d8c0~mv2_d_5376_2688_s_4_2.jpg"
             rotation="0 -130 0"></a-sky>
         <a-entity id="cam" camera position="0 0 0" look-controls>
-            <a-entity cursor="fuse:true;fuseTimeout:2000;" geometry="primitive:ring;radiusInner:0.012;radiusOuter:0.02"
+            <a-entity cursor="fuse:true;fuseTimeout:1000;" geometry="primitive:ring;radiusInner:0.017;radiusOuter:0.02"
                 position="0 0 -1.8" material="shader:flat;color:#F2F5F3"
-                animation__mouseenter__size="property:scale;to:5 5 5;startEvents:mouseenter;dur:500;easing:easeOutQuart;"
-                animation__mouseleave__size="property:scale;to:1 1 1;startEvents:mouseleave;dur:300;"
-                animation__mouseenter__color="property:material.color;to:#5EEB6C;startEvents:mouseenter;dur:500;"
+                animation__mouseenter__size="property:scale;to:5 5 5;startEvents:mouseenter;dur:1000;easing:easeOutQuart;"
+                animation__mouseleave__size="property:scale;to:1 1 1;startEvents:mouseleave;dur:300;easing:easeOutQuart;"
+                animation__mouseenter__color="property:material.color;to:#5EEB6C;startEvents:mouseenter;dur:1000;easing:easeOutQuart;"
                 animation__mouseleave__color="property:material.color;to:#F2F5F3;startEvents:mouseleave;dur:300;">
             </a-entity>
         </a-entity>
