--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,10 @@
         <a-entity id="opere" position="0 0 0" rotation="0 0 0" scale="1 1 1"></a-entity>
 
         <!-- door componet -->
-        <a-entity id="porta" position="0 0 0" rotation="0 0 0" >
-            
+        <a-entity id="porta" position="0 0 0" rotation="0 0 0" ></a-entity>
+        
+        <!--EL  boardo-->
+        <a-entity id="boardo" look-at="[camera]" position="0 0 -3" boardo ></a-entity>
  
         <!-- <a-sphere o_door="index:1;" radius="0.4" position="4.96167 -1 -3.42365" material="color: #131313; shader: flat;"
             look-at="[camera]" geometry="segmentsHeight: 12; segmentsWidth: 9" ">    
