book componet layout

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
 
         <a-sky id="background" src="#room1" rotation="0 -90 0"></a-sky>
         <!-- book -->
-        <a-gltf-model src="#book" rotation="0 -30 0" book=''></a-gltf-model>
+        
+        <a-entity id="book" book></a-entity>
+        <!-- camera -->
         <a-entity id="cam" camera position="4.895750045776367 -1.2412012815475464 0.3603135347366333" look-controls>
 
             <!-- cursor -->
