scrive book event

--- a/src/index.html
+++ b/src/index.html
@@ -41,19 +41,25 @@
                 src="https://static.wixstatic.com/media/e4ae07_e8c1b26e5fb34b70b647e6f0b6865bc6~mv2.png/v1/fit/w_128,h_128/e4ae07_e8c1b26e5fb34b70b647e6f0b6865bc6~mv2.png">
             <!-- icon -->
             <img preloader="true" id="LOC1" crossorigin="anonymous"
-            src="https://static.wixstatic.com/media/e4ae07_0767ddc42c66414787ab59acab336aa9~mv2.png/v1/fit/w_128,h_128/e4ae07_0767ddc42c66414787ab59acab336aa9~mv2.png">
+            src="https://static.wixstatic.com/media/e4ae07_e5778ed7cef24d78b845619faa70851b~mv2.png/v1/fit/w_128,h_128/e4ae07_e5778ed7cef24d78b845619faa70851b~mv2.png">
             <img preloader="true" id="LOC2" crossorigin="anonymous"
             src="https://static.wixstatic.com/media/e4ae07_62f495b2dca04b9d8e2ec225e2a60917~mv2.png/v1/fit/w_64,h_64/e4ae07_62f495b2dca04b9d8e2ec225e2a60917~mv2.png">
             <!-- book -->
             <a-asset-item preloader="true" id="book" src="https://rawcdn.githack.com/carllx/hyuch360/f5115765d5541d5d804ebb27b0e883af2c74bc9e/src/static/book.glb"></a-asset-item>
             <img preloader="true" id="book_diff" crossorigin="anonymous"
             src="https://static.wixstatic.com/media/e4ae07_85801be724634657a1e58a58e01aed44~mv2_d_4096_4096_s_4_2.png/v1/fit/w_1024,h_1024/e4ae07_85801be724634657a1e58a58e01aed44~mv2_d_4096_4096_s_4_2.png">
+            <!-- logos -->
+            <img preloader="true" id="logoMedici" crossorigin="anonymous"
+            src="https://static.wixstatic.com/media/e4ae07_fe459cd820464052800d75f17d628d2d~mv2.png/v1/fit/w_128,h_128/e4ae07_fe459cd820464052800d75f17d628d2d~mv2.png">
+            <img preloader="true" id="logoUffizi" crossorigin="anonymous"
+            src="https://static.wixstatic.com/media/e4ae07_24024af2b18540208f1b4689ef0381d4~mv2.png/v1/fit/w_128,h_128/e4ae07_24024af2b18540208f1b4689ef0381d4~mv2.png">
+            <img preloader="true" id="logoMandragora" crossorigin="anonymous"
+            src="https://static.wixstatic.com/media/e4ae07_f363f75e121644d4a44739e110489ca6~mv2.png/v1/fit/w_128,h_128/e4ae07_f363f75e121644d4a44739e110489ca6~mv2.png">
             
         </a-assets>
 
         <a-sky id="background" src="#room1" rotation="0 -90 0"></a-sky>
         <!-- book -->
-        
         <a-entity id="book" book></a-entity>
         <!-- camera -->
         <a-entity id="cam" camera position="4.895750045776367 -1.2412012815475464 0.3603135347366333" look-controls>
@@ -101,3 +107,11 @@
 </body>
 
 </html>
+
+
+
+
+LOC-1 – 1.png	e4ae07_e5778ed7cef24d78b845619faa70851b~mv2.png
+UFFIZI -bianca.png	e4ae07_24024af2b18540208f1b4689ef0381d4~mv2.png
+PalazzoMedci-biaca.png	e4ae07_fe459cd820464052800d75f17d628d2d~mv2.png
+Mandragora.png	e4ae07_f363f75e121644d4a44739e110489ca6~mv2.png
