--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             <img preloader="true" id="LOC2" crossorigin="anonymous"
             src="https://static.wixstatic.com/media/e4ae07_62f495b2dca04b9d8e2ec225e2a60917~mv2.png/v1/fit/w_64,h_64/e4ae07_62f495b2dca04b9d8e2ec225e2a60917~mv2.png">
             <!-- book -->
-            <a-asset-item preloader="true" id="book" src="https://rawcdn.githack.com/carllx/hyuch360/f5115765d5541d5d804ebb27b0e883af2c74bc9e/src/static/book.glb"></a-asset-item>
+            <a-asset-item preloader="true" id="book_gltf" src="https://rawcdn.githack.com/carllx/hyuch360/f5115765d5541d5d804ebb27b0e883af2c74bc9e/src/static/book.glb"></a-asset-item>
             <img preloader="true" id="book_diff" crossorigin="anonymous"
             src="https://static.wixstatic.com/media/e4ae07_85801be724634657a1e58a58e01aed44~mv2_d_4096_4096_s_4_2.png/v1/fit/w_1024,h_1024/e4ae07_85801be724634657a1e58a58e01aed44~mv2_d_4096_4096_s_4_2.png">
             <!-- logos -->
@@ -60,7 +60,7 @@
 
         <a-sky id="background" src="#room1" rotation="0 -90 0"></a-sky>
         <!-- book -->
-        <a-entity id="book" book></a-entity>
+        <a-entity id="book" ></a-entity>
         <!-- camera -->
         <a-entity id="cam" camera position="4.895750045776367 -1.2412012815475464 0.3603135347366333" look-controls>
 
